<resources>
    <string name="app_name">FusePla</string>
    <string name="app_name_module">工程助手supPlant版</string>
    <string name="IP_SETTING">设置Ip</string>
    <string name="STOP_SCAN">停止搜索</string>
    <string name="START_SCAN">开始搜索</string>
    <string name="RSSI_COLLECT">RSSI收集</string>
    <string name="RSSI_AVERAGE">RSSI平均值</string>
    <string name="BEACON_DISTANCE">信标距离(米)</string>
    <string name="submit">提交</string>
    <string name="_1">1</string>
    <string name="FIRST_LOGIN_IP_CONFIG">首次登录设置IP端口</string>
    <string name="DEVICE_CHOSEN">选中设备：</string>
    <string name="COPY_PASTE">已经复制到剪贴板，请选择距离项粘贴</string>
    <string name="RESEARCH_BLE">数据量不足。请靠近信标后重新搜索</string>
    <string name="gps_select">选点</string>
    <string name="MUST_FULL_ALL_DATA">请填写全部数据</string>
    <string name="ALL_DATA_PREPARED">数据已经填写完成</string>
    <string name="FLOOR">楼层信息：</string>
    <string name="BEACON_SETTING">信标设置</string>
    <string name="BEACON_MANAGE">信标管理</string>
    <string name="INPUT_DEVICE_NAME_HINT">请输入设备名称</string>
    <string name="ALL_DEVICE_FOUND"> 设备被发现 </string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">设备地址:</string>
    <string name="label_state">状态:</string>
    <string name="no_data">没有数据</string>
    <string name="connected">已连接</string>
    <string name="disconnected">已断开连接</string>
    <string name="title_devices">蓝牙设备扫描</string>
    <string name="error_bluetooth_not_supported">蓝牙不支持.</string>

    <string name="unknown_device">未知设备</string>
    <string name="unknown_characteristic">未知特征</string>
    <string name="unknown_service">未知服务</string>

    <!-- Menu items -->
    <string name="menu_connect">连接</string>
    <string name="menu_disconnect">断开连接</string>
    <string name="menu_scan">扫描</string>
    <string name="menu_stop">停止</string>
    <string name="click_choose_coor">点击选择位置</string>
    <string name="only_can_abc">只能修改信号强度信息、广播间隔、设备ID,请先获取信号强度的值后编辑，点击提交</string>

    <string name="network_setting">网络配置</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="logout">注销</string>
    <string name="sort">排序</string>
    <string name="rssi">信号强度</string>
    <string name="device_detail">设备详情</string>
    <string name="floor_info">楼层</string>
    <string name="coordinate">坐标</string>
    <string name="rssi_m">信号强度</string>

    <string name="impact_factors">影响因子</string>
    <string name="distance">距离</string>
    <string name="meter">米</string>
    <string name="calculate">计算</string>
    <string name="ble_info">信标属性</string>
    <string name="bind">绑定</string>
    <string name="un_bind">解绑</string>

    <string name="binding_bluetooth">正在连接蓝牙</string>
    <string name="get">获取</string>
    <string name="tips">温馨提示：\n支持修改信号强度、广播间隔、设备ID。\n信号强度分为0-12，发射越来越大。\n广播间隔分为10-200，代表发射间隔为100ms-2000ms \n操作步骤：\n先获取，后编辑，再提交</string>

    <string name="stop_scan">扫描关闭</string>
    <string name="scanning">正在扫描</string>
    <string name="tip">提示</string>
    <string name="has_saved">保存完成</string>
    <string name="lan">纬度</string>
    <string name="lon">经度</string>
    <string name="height">高度</string>
    <string name="fail_to_get_ble_info">信标信息获取失败</string>
    <string name="success_to_get_ble_info">信标信息获取成功</string>
    <string name="fail_to_update_ble_info">信标信息更新失败</string>
    <string name="success_to_update_ble_info">信标信息更新成功</string>
    <string name="load_error">显示异常</string>
    <string name="no_coordinate_was_chose">没有选中任何坐标</string>
    <string name="binding">正在绑定</string>
    <string name="Unbound">未绑定</string>
    <string name="already_bound">已经绑定</string>
    <string name="noise">噪声</string>
    <string name="update_time">更新时间</string>
    <string name="delete">删除</string>
    <string name="success_to_unbind">解除绑定成功</string>
    <string name="please_input_new_server_ip">请输入新的服务器地址</string>
    <string name="old_server_ip">原服务器地址</string>
    <string name="port_setting">端口号设置</string>
    <string name="loading">加载中...</string>
    <string name="need_to_bind_device_first">需要先绑定设备</string>
    <string name="tip_connect_device">连接设备之前需要 【长按】 以绑定设备</string>
    <string name="not_open">暂未开放</string>
    <string name="open_location_first">请先打开位置开关</string>
    <string name="please_login">请重新登录</string>
    <string name="operation_failed">操作失败</string>
    <string name="operation_successful">操作成功</string>
    <string name="error_ip_can_not_be_empty">错误：ip不能为空</string>
    <string name="can_not_be_empty">不能为空</string>
    <string name="only_1_12">只能填写0-12之间的数字</string>
    <string name="error_port_can_not_be_empty">错误：端口不能为空</string>
    <string name="please_unbind_by_yourself">请自行解绑</string>
    <string name="only_0_255">只能填写0-255之间的数字</string>
    <string name="only_10_200">只能填写10-200之间的数字</string>
    <string name="can_not_operate_under_7">Android7.0以下无法操作</string>
    <string name="need_to_allow_all_permission_required">警告,未能获取完整授权，应用将退出\\n在权限设置中开启相应权限后再重新启动APP</string>
    <string name="please_get_a_item_firstly">请先获取一个条目</string>


</resources>