<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    android:orientation="vertical"
    tools:context=".module_beacon.beaconManage.BeaconDetailActivity">

    <include layout="@layout/all_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y400">

        <com.supcon.common.view.view.js.BridgeWebView
            android:id="@+id/webView"
            android:tag="webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/bt_choose_gps"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y64"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/y24"
            android:background="@drawable/bg_button_blue_round"
            android:text="@string/click_choose_coor"
            android:textColor="@color/white"
            android:textSize="@dimen/x32" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x24"
        android:layout_marginTop="@dimen/y15"
        android:layout_marginBottom="@dimen/y10"
        android:text="@string/device_detail"
        android:textColor="@color/text_gray_7"
        android:textSize="@dimen/x24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x24"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/floor_info"
            android:textSize="@dimen/x30" />

        <EditText
            android:id="@+id/et_floor_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x76"
            android:layout_weight="4"
            android:background="@null"
            android:hint="@string/floor_info"
            android:textSize="@dimen/x30" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x24"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/lon"
            android:textSize="@dimen/x30" />

        <EditText
            android:id="@+id/et_gps_x_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x76"
            android:layout_weight="4"
            android:background="@null"
            android:hint="@string/lon"
            android:textSize="@dimen/x30" />

    </LinearLayout> <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x24"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/lan"
            android:textSize="@dimen/x30" />

        <EditText
            android:id="@+id/et_gps_y_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x76"
            android:layout_weight="4"
            android:background="@null"
            android:hint="@string/lan"
            android:textSize="@dimen/x30" />

    </LinearLayout> <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x24"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/height"
            android:textSize="@dimen/x30" />

        <EditText
            android:id="@+id/et_gps_z_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x76"
            android:layout_weight="4"
            android:background="@null"
            android:hint="@string/height"
            android:textSize="@dimen/x30" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x24"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/noise"
            android:textSize="@dimen/x30" />

        <EditText
            android:id="@+id/et_n_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x76"
            android:layout_weight="4"
            android:background="@null"
            android:hint="noise"
            android:enabled="false"
            android:textSize="@dimen/x30" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x24"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/rssi_m"
            android:textSize="@dimen/x30" />

        <EditText
            android:enabled="false"
            android:id="@+id/et_p0_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x76"
            android:layout_weight="4"
            android:background="@null"
            android:hint="@string/rssi_m"
            android:textSize="@dimen/x30" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x24"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="更新时间"
            android:textSize="@dimen/x30" />

        <EditText
            android:enabled="false"
            android:id="@+id/et_time_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x76"
            android:layout_weight="4"
            android:background="@null"
            android:hint="@string/update_time"
            android:textSize="@dimen/x30" />

    </LinearLayout>

    <Button
        android:layout_margin="@dimen/x24"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:background="@drawable/bg_button_red_round"
        android:id="@+id/bt_delete"
        android:textColor="@color/white"
        android:text="@string/delete"/>

</LinearLayout>