<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/y82"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x24"
            android:text="1" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/x23"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="@dimen/x30" />

            <EditText
                android:id="@+id/et_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x30"
                android:background="@null"
                android:hint="@string/distance"
                android:inputType="numberDecimal"
                android:textSize="@dimen/x30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x30"
                android:text="@string/meter"
                android:textSize="@dimen/x30" />
        </LinearLayout>

        <View
            android:layout_width="3px"
            android:layout_marginRight="@dimen/x15"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginBottom="@dimen/y20"
            android:layout_marginTop="@dimen/y20"
            android:layout_height="match_parent"
            android:background="@color/gray_line"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="rssi:"
                android:textSize="@dimen/x30" />

            <EditText
                android:id="@+id/et_rssi_average"
                android:layout_width="@dimen/x90"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x36"
                android:background="@null"
                android:inputType="numberSigned|numberDecimal"
                android:text="sss"
                android:textSize="@dimen/x30" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:gravity="center_vertical"
            android:layout_weight="1"            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/y60"
                android:background="@drawable/bg_button_blue_round"
                android:textColor="@color/white"
                android:layout_marginRight="@dimen/x15"
                android:text="@string/menu_scan"
                android:id="@+id/bt_scan"
                android:textSize="@dimen/x20" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/y60"
                android:background="@drawable/bg_button_blue_round"
                android:textColor="@color/white"
                android:layout_marginRight="@dimen/x15"
                android:text="@string/calculate"
                android:id="@+id/bt_calculate"
                android:textSize="@dimen/x20" />
        </LinearLayout>

    </LinearLayout>

    <include
        layout="@layout/horizontal_divider"
        android:layout_width="match_parent"
        android:layout_height="1px" />

</LinearLayout>